AC_INIT(regex.cc)
OZ_INIT
BUILDTOP=`cd ../.. && pwd`
AC_SUBST(BUILDTOP)
SRCDIR=`pwd`
AC_SUBST(SRCDIR)
AC_CANONICAL_HOST
AC_PROG_CXX
AC_LANG_CPLUSPLUS
AC_PROG_INSTALL
OZ_PATH_PROG(OZC,ozc,OZC=$BUILDTOP/share/lib/ozc.sh)
OZ_PATH_PROG(OZPLATFORM,ozplatform)
OZ_PATH_PROG(OZDYNLD,ozdynld)
OZ_PATH_PROG(INSTALL_DIR,mkinstalldirs)
PLATFORM=`$OZPLATFORM`
AC_SUBST(OZC)
AC_SUBST(OZDYNLD)
AC_SUBST(PLATFORM)
AC_SUBST(INSTALL_DIR)
AC_OUTPUT(Makefile)

errprint(ifdef([OZ_INIT],
 [autoconf succeeded.
],
 [autoconf failed: use 'autoconf -l ../..' to include ../aclocal.m4.
]))
